# clinical_informatics_umls

./: .env.template  .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
UMLS/: semantic_types.txt
UMLS/subset/2022AB/META/: semantic_groups.pipe
clinical_informatics_umls/: __init__.py  create_nodes_edges.py  create_sqlite_db.py  edges_part2.py  neo2rdf.py  nodes_edges_part1.py  umls_downloader.py
conf/: 2021AA_subset_config.prop  2021AB_subset_config.prop  2022AB_config.prop
cypher_queries/: part0.cypher  part1.cql  part1.cypher
databases/mysql/: mysql_indexes.sql  mysql_tables.sql
databases/postgres/: psql_create_table.sql  psql_index_keys.sql
docs/source/: conf.py  index.rst
grass/: style.grass
notebooks/: part0_indexing_constraints.ipynb  part1_connection_indexes_constraints.ipynb  umls_graph_create.ipynb
output_data/: neo4j_to_rdf_serialization.ttl  neo4j_to_turtle_serialization.ttl  sample_neo4j_to_rdf_serialization.rdf  sample_neo4j_to_rdf_serialization.ttl  testing.n3  v0_neo4j_umls_graph_mapped_to_rdf_sample.rdf  v0_neo4j_umls_graph_to_RDF_sample_triples.csv
postgres/: psql_create_table.sql  psql_index_keys.sql
scripts/: create_sqlite_db.py  neo2rdf.py
sqlite/: create_sqlite_db.sh  umls_2021AA_sqlite3.sh
sqlite3/: create_sqlite3_db.sh
src/: __init__.py  create_sqlite_db.py  edges_part2.py  neo2rdf.py  nodes_edges.py  nodes_edges_part1.py  test.py
umls_user_guide/: MetamorphoSys_101.md  Metamorphosys.md
