[tool.poetry]
name = "clinical_informatics_umls"
version = "0.1.0"
description = ""
authors = ["rcolinp <rcolinpiombino@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pysqlite3 = "^0.4.7"
requests = "^2.27.1"
numpy = "^1.22.3"
pandas = "^1.4.2"
psycopg2-binary = "^2.9.3"
rdflib = "^6.1.1"
mysql-connector = "^2.2.9"
matplotlib = "^3.5.2"
lxml = "^4.8.0"
tqdm = "^4.64.0"
graphdatascience = "^1.0.0"
pykeen = "^1.8.1"
neo4j = "^4.4.3"
py2neo = "^2021.2.3"
SQLAlchemy = "^1.4.36"
mariadb = "^1.0.11"
PyMySQL = "^1.0.2"


[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pylint = "^2.12.2"
python-dotenv = "^0.19.2"
black = {extras = ["jupyter"], version = "^22.3.0"}
tox = "^3.25.0"
flake8 = "^4.0.1"
ipykernel = "^6.5.1"
jupyter = "^1.0.0"
autopep8 = "^1.6.0"
toml = "^0.10.2"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
line_length = 88
include_trailing_comma = true

[tool.black]
multi_line_output = 3
line_length = 88
include_trailing_comma = true