[tool.poetry]
name = "clinical_informatics_umls"
version = "0.1.0"
description = ""
authors = ["rcolinp <rcolinpiombino@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
requests = "^2.31.0"
numpy = "^1.22.3"
pandas = "^1.4.2"
rdflib = "^6.1.1"
mysql-connector = "^2.2.9"
tqdm = "^4.64.0"
neo4j = "^4.4.3"
SQLAlchemy = "^1.4.36"


[tool.poetry.dev-dependencies]
python-dotenv = "^0.19.2"
black = {extras = ["jupyter"], version = "^22.3.0"}
autopep8 = "^1.6.0"
isort = "^5.10.1"

[tool.poetry.group.dev.dependencies]
sphinx = "^6.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
line_length = 88
include_trailing_comma = true

[tool.black]
multi_line_output = 3
line_length = 88
include_trailing_comma = true